fix aside on tablet and max-width body

--- a/assets/style.css
+++ b/assets/style.css
@@ -21,6 +21,8 @@ body {
 	background-color: var(--background-grey);
 	color: var(--primary-text);
 	font-family: 'Montserrat', sans-serif;
+	max-width: 1440px;
+	margin: auto;
 }
 
 header,
@@ -188,16 +190,19 @@ aside {
 	font-style: italic;
 	line-height: 145%;
 	margin-bottom: 1.4rem;
+	font-size: clamp(1.6rem, calc(1.6rem + ((1vw - 3.62px) * 1.8553)), 3.6rem);
 }
 
 .aside-text .author {
 	font-weight: 600;
 	color: var(--dark-text);
 	margin-bottom: 0.6rem;
+	font-size: clamp(1.6rem, calc(1.6rem + ((1vw - 3.62px) * 0.7421)), 2.4rem)
 }
 
 .aside-text .author-desc {
-	font-size: 1.2rem;
+	/* font-size: 1.2rem; */
+	font-size: clamp(1.2rem, calc(1.2rem + ((1vw - 3.62px) * 0.7421)), 2rem);
 	color: var(--subtle-text);
 }
 
